feat(cart): Enhance product addition to cart and refactor Product class
- Added methods in the Cart class to manage adding products, including necessary modifications for improved interaction with the cart.

- Enhanced the Product class with new methods (addToCart, prepareCartProduct, prepareCartProductParams) to handle adding products to the cart effectively.

- Refactored the Product class, especially in the  method, to improve code structure and readability.

- Integrated the Product and Cart classes to ensure a smooth user experience when adding products with specific options and quantities.

Impact:
- These changes significantly elevate the user's shopping experience by offering a more interactive and responsive cart.
- Refactoring the Product class leads to better code organization and maintainability, facilitating future development and enhancements.

--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -84,7 +84,7 @@
       height: 220px;
     }
 
-    > img {
+    >img {
       @include center();
       height: auto;
       opacity: 0;
@@ -103,7 +103,8 @@
       @include accordion-open();
     }
 
-    .product__order, .product__images {
+    .product__order,
+    .product__images {
       opacity: 1;
     }
 
