--- a/src/sass/partials/_settings.scss
+++ b/src/sass/partials/_settings.scss
@@ -37,7 +37,8 @@ $base-size: 12px;
     background: lighten($btn-bg, 3%);
   }
 
-  &.disabled, &[disabled] {
+  &.disabled,
+  &[disabled] {
     background: desaturate($btn-bg, 100%);
     border-color: desaturate($btn-border, 100%);
     cursor: not-allowed;
