--- a/src/sass/partials/_cart.scss
+++ b/src/sass/partials/_cart.scss
@@ -1,6 +1,6 @@
 .cart {
   position: absolute;
-  width: 300px;
+  width: 270px;
   right: 0;
   top: $base-size;
   padding: ($base-size) ($base-size * 1.5);
@@ -10,6 +10,8 @@
   font-size: $base-size;
   box-shadow: 0 0 $base-size rgba(0, 0, 0, 0.2);
   z-index: 9999;
+
+  
 
   &.active {
     .cart__content {
@@ -73,39 +75,8 @@
 
   }
 
-  &__product {
-    width: 170px;
-  }
-
-
-  &__product-header {
-    @include flex(row, center, space-between);
-  }
-
-  &__product-details {
-    li {
-      display: block;
-      margin: 0 0 ($base-size / 4) 0;
-      font-size: 10px;
-      color: lighten($color-dark, 40%);
-      text-transform: lowercase;
-      font-style: italic;
-      line-height: 1.3;
-      letter-spacing: 0.5px;
-    }
-
-  }
-
-  &__product-details-label {
-    position: relative;
-    padding: 0 ($base-size / 2) 0 0;
-    font-weight: 700;
-
-    &::after {
-      position: absolute;
-      content: ':';
-    }
-
+  &__product-name {
+    width: 150px;
   }
 
   &__action-buttons {
@@ -132,7 +103,7 @@
   }
 
   &__order-price {
-    margin: $base-size 0 0 0;
+    margin: 0;
     padding: $base-size 0;
     list-style-type: none;
     border-top: 1px solid lighten($color-dark, 70%);
@@ -140,16 +111,16 @@
     li {
       @include flex(row, center, space-between);
     }
+
   }
 
   &__order-confirmation {
     border-top: 1px solid lighten($color-dark, 70%);
     padding: $base-size 0 0 0;
 
-    input,
-    button {
+    input, button {
       width: 100%;
-      margin-bottom: ($base-size / 2);
+      margin-bottom: ($base-size * 0.5);
     }
 
   }
