--- a/src/sass/partials/_elements.scss
+++ b/src/sass/partials/_elements.scss
@@ -30,15 +30,10 @@
 
 /* Form elements */
 
-input,
-select {
+input, select {
   border: 1px solid $color-dark;
   border-radius: $radius;
   padding: $base-size;
-
-  &.error {
-    border-color: $color-main;
-  }
 }
 
 .checkbox {
@@ -84,11 +79,11 @@ select {
 
   }
 
-  &:hover input~.checkbox__checkmark {
+  &:hover input ~ .checkbox__checkmark {
     content: none;
   }
 
-  input:checked~.checkbox__checkmark:after {
+  input:checked ~ .checkbox__checkmark:after {
     display: block;
   }
 
